--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,30 @@
-#empty
+name: CI - Test
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Checkout del codice
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Step 2: Setup di Node.js (es. versione 18)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      # Step 3: Installazione dipendenze
+      - name: Install dependencies
+        run: npm install
+
+      # Step 4: Esecuzione dei test
+      - name: Run tests
+        run: npm test#empty
