--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,24 +7,21 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout del codice
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Setup di Node.js (es. versione 18)
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          node-version: 18
+          distribution: 'temurin'
+          java-version: '17'
 
-      # Step 3: Installazione dipendenze
-      - name: Install dependencies
-        run: npm install
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-      # Step 4: Esecuzione dei test
       - name: Run tests
-        run: npm test#empty
+        run: mvn test
